# python-localstack

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
